--- a/app/src/main/res/layout/sample_product.xml
+++ b/app/src/main/res/layout/sample_product.xml
@@ -33,6 +33,15 @@
                 android:text="Product Desc"
                 android:layout_height="wrap_content"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="Edit"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:textColor="@android:color/holo_orange_dark"
+                android:id="@+id/btnEdit"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
