--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -3,33 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".AddProductActivity">
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_gravity="center"
+        android:id="@+id/imageBrowse"
+        android:layout_height="150dp"
+        android:src="@drawable/baseline_add_a_photo_24" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:hint="Click on image to browse"
+        android:layout_height="wrap_content"/>
     <EditText
         android:id="@+id/editTextName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
-        android:hint="Enter Name" />
+        android:hint="Enter Name"
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/editTextDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="Enter Desc" />
+        android:hint="Enter Desc"
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/editTextPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="number"
-        android:hint="Enter price" />
+        android:hint="Enter price"
+        android:inputType="number" />
 
     <Button
         android:id="@+id/button"
