--- a/app/src/main/res/layout/activity_update_product.xml
+++ b/app/src/main/res/layout/activity_update_product.xml
@@ -8,6 +8,13 @@
     android:layout_height="match_parent"
     tools:context=".AddProductActivity">
 
+    <ImageView
+        android:layout_width="150dp"
+        android:id="@+id/imageUpdate"
+        android:layout_gravity="center"
+        android:src="@drawable/baseline_add_a_photo_24"
+        android:layout_height="150dp"/>
+
     <EditText
         android:id="@+id/editTextNameUpdate"
         android:layout_width="match_parent"
